--- a/rocweb/templates/login.html
+++ b/rocweb/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title%}
-<title>Login</title>
+	Login
 {% endblock %}
 {% block content %}
 <div class="limiter">
