--- a/rocweb/templates/home.html
+++ b/rocweb/templates/home.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title%}
+    Rocweb
+{% endblock %}
 {% block content %}
 
 <form action="" method='POST'>
