--- a/rocweb/templates/report.html
+++ b/rocweb/templates/report.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title%}
-<title>Report</title>
+    Report
 {% endblock %}
 {% block content %}
 <style>
